Further chrome overflow-y fixes
Looks like overflow-y: visible doesn't always fix it, I'm going to use
hidden. This should never actually hide anything because the height of
these containers is never constrained.

--- a/_base.scss
+++ b/_base.scss
@@ -505,7 +505,7 @@ table.codehilitetable {
   border-spacing: 0;
   display: block;
   overflow-x: auto;
-  overflow-y: visible;
+  overflow-y: hidden;
   max-width: 100%;
 }
 
@@ -540,7 +540,7 @@ div.codehilite {
 
 div.section>div.codehilite {
   overflow-x: auto;
-  overflow-y: visible;
+  overflow-y: hidden;
 }
 
 hr {
